dd/config-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f dd.yaml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: config-server
  name: config-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: config-server
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f dd.yaml
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: config-server
    spec:
      containers:
        - image: cr.yandex/crpbk84pocbafpk713c4/config-server:20241209.192410-runner
          name: config-server
          ports:
            - containerPort: 8090
              protocol: TCP
      restartPolicy: Always
