dd/db-personal-account-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f dd.yaml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: db-personal-account
  name: db-personal-account
spec:
  containers:
    - env:
        - name: POSTGRES_DB
          value: postgres
        - name: POSTGRES_PASSWORD
          value: postgres
        - name: POSTGRES_USER
          value: postgres
      image: postgres:15.2
      name: db-personal-account
      ports:
        - containerPort: 5432
          protocol: TCP
        - containerPort: 5434
          protocol: TCP
  restartPolicy: OnFailure
