dd/eureka-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f dd.yaml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: eureka-server
  name: eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: eureka-server
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f dd.yaml
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: eureka-server
    spec:
      containers:
        - env:
            - name: CONFIG_SERVER_URL
              value: http://config-server.default.svc.cluster.local:8090
          image: cr.yandex/crpbk84pocbafpk713c4/eureka-server:20241207.132815-runner
          name: eureka-server
          ports:
            - containerPort: 8761
              protocol: TCP
      restartPolicy: Always
