dd/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f dd.yaml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f dd.yaml
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - image: cr.yandex/crpbk84pocbafpk713c4/frontend:20241208.172702-runner
          name: frontend
          ports:
            - containerPort: 3000
              protocol: TCP
      restartPolicy: Always
