dd/gateway-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f dd.yaml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: gateway-server
  name: gateway-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gateway-server
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f dd.yaml
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: gateway-server
    spec:
      containers:
        - env:
            - name: CONFIG_SERVER_URL
              value: http://config-server.default.svc.cluster.local:8090
            - name: EUREKA_SERVER_URL
              value: http://eureka-server.default.svc.cluster.local:8761/eureka/
          image: cr.yandex/crpbk84pocbafpk713c4/gateway-server:20241209.181455-runner
          name: gateway-server
          ports:
            - containerPort: 8085
              protocol: TCP
      restartPolicy: Always
