dd/personal-account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f dd.yaml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: personal-account
  name: personal-account
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: personal-account
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f dd.yaml
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: personal-account
    spec:
      containers:
        - env:
            - name: CONFIG_SERVER_URL
              value: http://config-server.default.svc.cluster.local:8090
            - name: EUREKA_SERVER_URL
              value: http://eureka-server.default.svc.cluster.local:8761/eureka/
            - name: KAFKA_BOOTSTRAP_SERVERS
              value: kafka-broker-0.kafka-broker-headless.default.svc.cluster.local:9092,kafka-broker-1.kafka-broker-headless.default.svc.cluster.local:9092,kafka-broker-2.kafka-broker-headless.default.svc.cluster.local:9092
            - name: POSTGRES_DB
              value: postgres
            - name: POSTGRES_HOST
              value: db-personal-account.default.svc.cluster.local
            - name: POSTGRES_PASSWORD
              value: postgres
            - name: POSTGRES_PORT
              value: "5434"
          image: cr.yandex/crpbk84pocbafpk713c4/personal-account:20241209.184735-runner
          name: personal-account
          ports:
            - containerPort: 8083
              protocol: TCP
      restartPolicy: Always
