dd/room-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f dd.yaml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: room-service
  name: room-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: room-service
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f dd.yaml
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: room-service
    spec:
      containers:
        - env:
            - name: CONFIG_SERVER_URL
              value: http://config-server.default.svc.cluster.local:8090
            - name: EUREKA_SERVER_URL
              value: http://eureka-server.default.svc.cluster.local:8761/eureka/
            - name: KAFKA_BOOTSTRAP_SERVERS
              value: kafka-broker-0.kafka-broker-headless.default.svc.cluster.local:9092,kafka-broker-1.kafka-broker-headless.default.svc.cluster.local:9092,kafka-broker-2.kafka-broker-headless.default.svc.cluster.local:9092
            - name: POSTGRES_DB
              value: postgres
            - name: POSTGRES_HOST
              value: db-room-service.default.svc.cluster.local
            - name: POSTGRES_PASSWORD
              value: postgres
            - name: POSTGRES_PORT
              value: "5435"
            - name: POSTGRES_USER
              value: postgres
          image: cr.yandex/crpbk84pocbafpk713c4/room-service:20241209.190331-runner
          name: room-service
          ports:
            - containerPort: 8084
              protocol: TCP
      restartPolicy: Always
