dd/sonar-db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f dd.yaml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: sonar-db
  name: sonar-db
spec:
  containers:
    - env:
        - name: POSTGRES_DB
          value: sonar
        - name: POSTGRES_PASSWORD
          value: sonar
        - name: POSTGRES_USER
          value: sonar
      image: postgres:15.2
      name: sonar-db
      ports:
        - containerPort: 5432
          protocol: TCP
        - containerPort: 5438
          protocol: TCP
  restartPolicy: OnFailure
