dd/sonarqube-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f dd.yaml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: sonarqube
  name: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sonarqube
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f dd.yaml
        kompose.version: 1.34.0 (HEAD)
      labels:
        io.kompose.service: sonarqube
    spec:
      containers:
        - env:
            - name: SONAR_JDBC_PASSWORD
              value: sonar
            - name: SONAR_JDBC_URL
              value: jdbc:postgresql://sonar-db.default.svc.cluster.local:5438/sonar
            - name: SONAR_JDBC_USERNAME
              value: sonar
            - name: SONAR_WEB_CONTEXT
              value: /sonar
          image: sonarqube:9.9-community
          name: sonarqube
          ports:
            - containerPort: 9000
              protocol: TCP
      restartPolicy: Always
