dd/config-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f dd.yaml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: config-server
  name: config-server
spec:
  ports:
    - name: "8090"
      port: 8090
      targetPort: 8090
  selector:
    io.kompose.service: config-server
