dd/db-auth-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f dd.yaml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: db-auth-service
  name: db-auth-service
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: db-auth-service
