dd/db-room-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f dd.yaml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: db-room-service
  name: db-room-service
spec:
  ports:
    - name: "5435"
      port: 5435
      targetPort: 5432
  selector:
    io.kompose.service: db-room-service
