dd/sonar-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f dd.yaml
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: sonar-db
  name: sonar-db
spec:
  ports:
    - name: "5438"
      port: 5438
      targetPort: 5432
  selector:
    io.kompose.service: sonar-db
