dd/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-balancer
  annotations:
    ingress.alb.yc.io/subnets: e9b9uvcfutm7k44d0r36
    ingress.alb.yc.io/external-ipv4-address: auto
    ingress.alb.yc.io/group-name: ingress-balancer
spec:
  rules:
    - host: penki.dmtrq.ru
      http:
        paths:
          - pathType: Prefix
            path: "/eureka"
            backend:
              service:
                name: eureka-server
                port:
                  number: 8761
          - pathType: Prefix
            path: "/gateway"
            backend:
              service:
                name: gateway-server
                port:
                  number: 8085
          - pathType: Prefix
            path: "/game-handler"
            backend:
              service:
                name: game-handler
                port:
                  number: 8082
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - pathType: Prefix
            path: "/sonar"
            backend:
              service:
                name: sonarqube
                port:
                  number: 80
